changes how transitions function to prevent overlapping

--- a/www/src/scss/viewer.scss
+++ b/www/src/scss/viewer.scss
@@ -182,6 +182,7 @@ h2 {
 .teeka {
   height: 0;
   opacity: 0;
+  display:none;
 }
 
 .display-translation .translation,
@@ -189,6 +190,7 @@ h2 {
 .display-teeka .teeka {
   height: auto;
   opacity: 1;
+  display: block;
 }
 
 .icons-translation .size,
